// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivacyStatementPopupText renders 1`] = `
<DocumentFragment>
  <mock-privacystatementpopuptext
    deps="[object Object]"
  />
</DocumentFragment>
`;

exports[`PrivacyStatementText renders 1`] = `
<DocumentFragment>
  <mock-privacystatementtext
    deps="[object Object]"
  />
</DocumentFragment>
`;
